fixes to style after issue with conflicting styles were overriden.

--- a/src/app/_layouts/main-layout/main-layout.component.html
+++ b/src/app/_layouts/main-layout/main-layout.component.html
@@ -67,7 +67,7 @@
 >
   <div class="flex flex-col md:flex-row w-11/12 mx-auto space-x-8">
     <div class="flex flex-col items-center md:items-start">
-      <a href="/" class="flex items-center p-3 w-1/6 font-bold text-black"
+      <a href="/" class="flex items-center p-3 font-bold text-black"
         ><img
           src="../../assets/logo.png"
           class="h-16"
@@ -77,15 +77,15 @@
       <p>Choose from the available clinics or specialties</p>
     </div>
     <div class="flex flex-col">
-      <h2>For Patients</h2>
-      <ul>
+      <h2 class="text-xl my-2">For Patients</h2>
+      <ul class="space-y-1">
         <li class="">Schedule</li>
         <li class="">Clinics</li>
       </ul>
     </div>
     <div class="flex flex-col">
-      <h2>For Doctors</h2>
-      <ul>
+      <h2 class="text-xl my-2">For Doctors</h2>
+      <ul class="space-y-1">
         <li class="">Schedule</li>
         <li class="">Clinics</li>
         <li class="">Appointments</li>
