--- a/src/app/_pages/booking/booking.component.html
+++ b/src/app/_pages/booking/booking.component.html
@@ -48,7 +48,7 @@
       >
         <div class="flex flex-col md:flex-row">
           <div class="w-3/4">
-            <h1 class="">23 Februray 2022</h1>
+            <h1 class="font-semibold text-2xl">23 Februray 2022</h1>
           </div>
           <div class="flex items-center justify-end">
             <button
