--- a/src/app/_pages/doctor-profile/doctor-profile.component.html
+++ b/src/app/_pages/doctor-profile/doctor-profile.component.html
@@ -36,15 +36,15 @@
           Catherine</i
         >
         <i class="not-italic py-4"
-          ><button
-            class="rounded py-[2px] border-2 border-[#e05d00] bg-transparent shadow-none ring-0 border-solid text-xs"
+          ><span
+            class="rounded py-[2px] border-2 border-[#e05d00] bg-transparent shadow-none ring-0 border-solid text-xs p-1"
           >
-            Dental Filings</button
-          >&nbsp;<button
-            class="rounded py-[2px] border-2 border-[#e05d00] bg-transparent shadow-none ring-0 border-solid text-xs"
+            Dental Filings</span
+          >&nbsp;<span
+            class="rounded py-[2px] border-2 border-[#e05d00] bg-transparent shadow-none ring-0 border-solid text-xs p-1"
           >
             Whitening
-          </button></i
+          </span></i
         >
       </div>
 
@@ -60,8 +60,8 @@
   </div>
   <div class="card bg-white rounded py-4 border border-gray-300 border-solid">
     <div class="flex flex-col w-5/6 mx-auto">
-      <h2 class="title font-normal">About Me</h2>
-      <p>
+      <h2 class="title font-semibold text-2xl my-2">About Me</h2>
+      <p class="my-2">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -70,7 +70,7 @@
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim id est laborum.
       </p>
-      <h2 class="title font-normal">Education</h2>
+      <h2 class="title font-normal text-2xl my-2">Education</h2>
       <ol
         class="relative border-solid border-y-transparent border-r-transparent border-l border-l-gray-200 list-none pl-0"
       >
@@ -91,7 +91,7 @@
           <time class="">2003 - 2005</time>
         </li>
       </ol>
-      <h2 class="title font-normal">Work & Experience</h2>
+      <h2 class="title font-normal text-2xl my-2">Work & Experience</h2>
       <ol
         class="relative border-solid border-y-transparent border-r-transparent border-l border-l-gray-200 list-none pl-0"
       >
@@ -118,7 +118,7 @@
           <time class="">2005 - 2007 (2 years)</time>
         </li>
       </ol>
-      <h2 class="title font-normal">Awards</h2>
+      <h2 class="title font-normal text-2xl my-2">Awards</h2>
       <ol
         class="relative border-solid border-y-transparent border-r-transparent border-l border-l-gray-200 list-none pl-0"
       >
@@ -157,7 +157,7 @@
           </p>
         </li>
       </ol>
-      <h2 class="font-normal">Services</h2>
+      <h2 class="title font-normal text-2xl my-2">Services</h2>
       <ul class="flex flex-wrap items-center mb-6 list-none space-x-8 pl-0">
         <li class="flex flex-row items-center">
           <i class="mr-2"
@@ -185,7 +185,7 @@
               </g></svg></i
           ><span>Composite Bonding</span>
         </li>
-        <li class="">
+        <li class="flex flex-row items-center">
           <i class="mr-2"
             ><svg
               fill="#000000"
@@ -211,7 +211,7 @@
               </g></svg></i
           ><span>Fissure Sealants</span>
         </li>
-        <li class="">
+        <li class="flex flex-row items-center">
           <i class="mr-2"
             ><svg
               fill="#000000"
@@ -265,7 +265,7 @@
               </g></svg></i
           ><span>Tooth Cleaning</span>
         </li>
-        <li class="">
+        <li class="flex flex-row items-center">
           <i class="mr-2"
             ><svg
               fill="#000000"
@@ -291,7 +291,7 @@
               </g></svg></i
           ><span>Root Canal Therapy</span>
         </li>
-        <li class="">
+        <li class="flex flex-row items-center">
           <i class="mr-2"
             ><svg
               fill="#000000"
@@ -318,7 +318,7 @@
           ><span>Implants</span>
         </li>
       </ul>
-      <h2 class="font-normal">Specializations</h2>
+      <h2 class="title font-normal text-2xl my-2">Specializations</h2>
       <ul class="flex flex-wrap items-center mb-6 list-none space-x-8 pl-0">
         <li class="flex flex-row items-center">
           <i class="mr-2"
@@ -346,7 +346,7 @@
               </g></svg></i
           ><span>Children Care</span>
         </li>
-        <li class="">
+        <li class="flex flex-row items-center">
           <i class="mr-2"
             ><svg
               fill="#000000"
@@ -372,7 +372,7 @@
               </g></svg></i
           ><span>Dental Care</span>
         </li>
-        <li class="">
+        <li class="flex flex-row items-center">
           <i class="mr-2"
             ><svg
               fill="#000000"
@@ -426,7 +426,7 @@
               </g></svg></i
           ><span>Orthodontist</span>
         </li>
-        <li class="">
+        <li class="flex flex-row items-center">
           <i class="mr-2"
             ><svg
               fill="#000000"
@@ -452,7 +452,7 @@
               </g></svg></i
           ><span>Periodontist</span>
         </li>
-        <li class="">
+        <li class="flex flex-row items-center">
           <i class="mr-2"
             ><svg
               fill="#000000"
