--- a/src/app/dashboard/_pages/home/home.component.html
+++ b/src/app/dashboard/_pages/home/home.component.html
@@ -75,17 +75,16 @@
             <div class="flex justify-center space-x-2">
               <button
                 type="button"
-                class="bg-[#B1DDF0] p-2 text-[#10739E] border-none rounded-md hover:opacity-80"
+                class="bg-[#B1DDF0] p-2 text-[#10739E] border-none rounded-md hover:opacity-80 flex items-center"
               >
-                <span nz-icon nzType="printer" nzTheme="outline"></span>
+                <span nz-icon nzType="printer" nzTheme="outline"></span>&nbsp;
                 Print
               </button>
               <button
                 type="button"
-                class="bg-[#D5E8D4] p-2 text-[#82B366] border-none rounded-md hover:opacity-80"
+                class="bg-[#D5E8D4] p-2 text-[#82B366] border-none rounded-md hover:opacity-80 flex items-center"
               >
-                <span nz-icon nzType="eye" nzTheme="outline"></span>
-                View
+                <span nz-icon nzType="eye" nzTheme="outline"></span>&nbsp; View
               </button>
             </div>
           </td>
@@ -124,17 +123,16 @@
             <div class="flex justify-center space-x-2">
               <button
                 type="button"
-                class="bg-[#B1DDF0] p-2 text-[#10739E] border-none rounded-md hover:opacity-80"
+                class="bg-[#B1DDF0] p-2 text-[#10739E] border-none rounded-md hover:opacity-80 flex items-center"
               >
-                <span nz-icon nzType="printer" nzTheme="outline"></span>
+                <span nz-icon nzType="printer" nzTheme="outline"></span>&nbsp;
                 Print
               </button>
               <button
                 type="button"
-                class="bg-[#D5E8D4] p-2 text-[#82B366] border-none rounded-md hover:opacity-80"
+                class="bg-[#D5E8D4] p-2 text-[#82B366] border-none rounded-md hover:opacity-80 flex items-center"
               >
-                <span nz-icon nzType="eye" nzTheme="outline"></span>
-                View
+                <span nz-icon nzType="eye" nzTheme="outline"></span>&nbsp; View
               </button>
             </div>
           </td>
@@ -202,7 +200,7 @@
               <td class="px-3 py-2">
                 <button
                   type="button"
-                  class="bg-[#008CFF] text-white rounded-md outline-none border-none px-3 py-1 hover:opacity-80"
+                  class="bg-[#008CFF] text-white rounded-md outline-none border-none px-3 py-1 hover:opacity-80 flex items-center"
                 >
                   <span nz-icon nzType="eye" nzTheme="outline"></span>
                   View
@@ -224,9 +222,9 @@
               <td class="px-3 py-2">
                 <button
                   type="button"
-                  class="bg-[#008CFF] text-white rounded-md outline-none border-none px-3 py-1 hover:opacity-80"
+                  class="bg-[#008CFF] text-white rounded-md outline-none border-none px-3 py-1 hover:opacity-80 flex items-center"
                 >
-                  <span nz-icon nzType="eye" nzTheme="outline"></span>
+                  <span nz-icon nzType="eye" nzTheme="outline"></span>&nbsp;
                   View
                 </button>
               </td>
@@ -246,9 +244,9 @@
               <td class="px-3 py-2">
                 <button
                   type="button"
-                  class="bg-[#008CFF] text-white rounded-md outline-none border-none px-3 py-1 hover:opacity-80"
+                  class="bg-[#008CFF] text-white rounded-md outline-none border-none px-3 py-1 hover:opacity-80 flex items-center"
                 >
-                  <span nz-icon nzType="eye" nzTheme="outline"></span>
+                  <span nz-icon nzType="eye" nzTheme="outline"></span>&nbsp;
                   View
                 </button>
               </td>
