--- a/src/app/onboarding/_layouts/onboarding-layout/onboarding-layout.component.html
+++ b/src/app/onboarding/_layouts/onboarding-layout/onboarding-layout.component.html
@@ -163,7 +163,7 @@
         <div class="flex flex-col space-y-6 justify-center h-full">
           <a routerLink="/onboarding/email">
             <div
-              class="step w-5/6 mx-auto bg-white shadow-md flex items-center"
+              class="step w-5/6 mx-auto bg-white shadow-md flex items-center py-2"
             >
               <div class="w-1/5 px-5">
                 <i
@@ -177,7 +177,7 @@
                 >
               </div>
               <div class="flex flex-col w-4/5 text-black">
-                <h2 class="">Registration</h2>
+                <h2 class="text-lg">Registration</h2>
                 <p class="">Enter Detail for Registration</p>
               </div>
             </div></a
@@ -187,7 +187,7 @@
             routerLink="/onboarding/profile-photo"
           >
             <div
-              class="step w-5/6 mx-auto bg-white shadow-md flex items-center"
+              class="step w-5/6 mx-auto bg-white shadow-md flex items-center py-2"
             >
               <div class="w-1/5 px-5">
                 <i
@@ -201,7 +201,7 @@
                 >
               </div>
               <div class="flex flex-col w-4/5 text-black">
-                <h2 class="">Profile Picture</h2>
+                <h2 class="text-lg">Profile Picture</h2>
                 <p class="">Upload Profile Picture</p>
               </div>
             </div></a
@@ -209,7 +209,7 @@
           <ng-template #doctorPhoto>
             <a routerLink="/onboarding/upload-identity">
               <div
-                class="step w-5/6 mx-auto bg-white shadow-md flex items-center"
+                class="step w-5/6 mx-auto bg-white shadow-md flex items-center py-2"
               >
                 <div class="w-1/5 px-5">
                   <i
@@ -223,7 +223,7 @@
                   >
                 </div>
                 <div class="flex flex-col w-4/5 text-black">
-                  <h2 class="">Upload Identity</h2>
+                  <h2 class="text-lg">Upload Identity</h2>
                   <p class="">Upload your Identity for Identification</p>
                 </div>
               </div></a
@@ -231,7 +231,7 @@
           </ng-template>
           <a routerLink="/onboarding/personal-details">
             <div
-              class="step w-5/6 mx-auto bg-white shadow-md flex items-center"
+              class="step w-5/6 mx-auto bg-white shadow-md flex items-center py-2"
             >
               <div class="w-1/5 px-5">
                 <i
@@ -245,7 +245,7 @@
                 >
               </div>
               <div class="flex flex-col w-4/5 text-black">
-                <h2 class="">Personal Details</h2>
+                <h2 class="text-lg">Personal Details</h2>
                 <p class="">Enter your Personal Details</p>
               </div>
             </div></a
@@ -254,7 +254,7 @@
             routerLink="/onboarding/select-members"
           >
             <div
-              class="step w-5/6 mx-auto bg-white shadow-md flex items-center"
+              class="step w-5/6 mx-auto bg-white shadow-md flex items-center py-2"
             >
               <div class="w-1/5 px-5">
                 <i
@@ -268,7 +268,7 @@
                 >
               </div>
               <div class="flex flex-col w-4/5 text-black">
-                <h2 class="">Select Members</h2>
+                <h2 class="text-lg">Select Members</h2>
                 <p class="">Select Family Members</p>
               </div>
             </div></a
@@ -276,7 +276,7 @@
           <ng-template #doctorVerification>
             <a routerLink="/onboarding/doctor-verification">
               <div
-                class="step w-5/6 mx-auto bg-white shadow-md flex items-center"
+                class="step w-5/6 mx-auto bg-white shadow-md flex items-center py-2"
               >
                 <div class="w-1/5 px-5">
                   <i
@@ -290,7 +290,7 @@
                   >
                 </div>
                 <div class="flex flex-col w-4/5 text-black">
-                  <h2 class="">Doctor Verification</h2>
+                  <h2 class="text-lg">Doctor Verification</h2>
                   <p class="">Upload Documents for the Verification</p>
                 </div>
               </div></a
@@ -301,7 +301,7 @@
             routerLink="/onboarding/dependent-details"
           >
             <div
-              class="step w-5/6 mx-auto bg-white shadow-md flex items-center"
+              class="step w-5/6 mx-auto bg-white shadow-md flex items-center py-2"
             >
               <div class="w-1/5 px-5">
                 <i
@@ -315,7 +315,7 @@
                 >
               </div>
               <div class="flex flex-col w-4/5 text-black">
-                <h2 class="">Dependent details</h2>
+                <h2 class="text-lg">Dependent details</h2>
                 <p class="">Dependents Profile</p>
               </div>
             </div></a
@@ -323,7 +323,7 @@
           <ng-template #doctorPreferences
             ><a routerLink="/onboarding/preferences">
               <div
-                class="step w-5/6 mx-auto bg-white shadow-md flex items-center"
+                class="step w-5/6 mx-auto bg-white shadow-md flex items-center py-2"
               >
                 <div class="w-1/5 px-5">
                   <i
@@ -337,7 +337,7 @@
                   >
                 </div>
                 <div class="flex flex-col w-4/5 text-black">
-                  <h2 class="">Preferences</h2>
+                  <h2 class="text-lg">Preferences</h2>
                   <p class="">Setup Preferences for your Account</p>
                 </div>
               </div></a
@@ -348,7 +348,7 @@
             routerLink="/onboarding/other-details"
           >
             <div
-              class="step w-5/6 mx-auto bg-white shadow-md flex items-center"
+              class="step w-5/6 mx-auto bg-white shadow-md flex items-center py-2"
             >
               <div class="w-1/5 px-5">
                 <i
@@ -362,7 +362,7 @@
                 >
               </div>
               <div class="flex flex-col w-4/5 text-black">
-                <h2 class="">Other Details</h2>
+                <h2 class="text-lg">Other Details</h2>
                 <p class="">More Information</p>
               </div>
             </div></a
