--- a/src/app/onboarding/_pages/personal-details/personal-details.component.html
+++ b/src/app/onboarding/_pages/personal-details/personal-details.component.html
@@ -122,7 +122,7 @@
             <span class="text-[#ff0000]">*</span>
           </h1>
           <div class="flex flex-col w-full my-2">
-            <div class="flex border-black border-dashed h-40 w-36">
+            <div class="flex border border-black border-dashed h-40 w-36">
               <div class="flex flex-col w-full items-center justify-center m-4">
                 <span nz-icon nzType="camera" nzTheme="outline"></span>
                 <span>Upload Photo</span>
