--- a/src/app/onboarding/_pages/profile-photo/profile-photo.component.html
+++ b/src/app/onboarding/_pages/profile-photo/profile-photo.component.html
@@ -15,26 +15,26 @@
           >
             <img
               src="http://placehold.it/300x300"
-              class="w-32 h-full flex-items-center justify-center"
+              class="h-full flex-items-center justify-center"
             />
           </div>
         </div>
         <div class="w-full my-2">
           <button
             type="button"
-            class="w-full border-gray-300 border-solid bg-white hover:bg-gray-100 shadow-md p-2"
+            class="w-full border-gray-300 border-solid bg-white hover:bg-gray-100 shadow-md p-2 flex items-center justify-center"
           >
-            <span nz-icon nzType="upload" nzTheme="outline"></span>
-            Upload image
+            <span nz-icon nzType="upload" nzTheme="outline"></span>&nbsp; Upload
+            image
           </button>
         </div>
         <div class="w-full my-2">
           <button
             type="button"
-            class="w-full border-gray-300 border-solid bg-white hover:bg-gray-100 shadow-md p-2"
+            class="w-full border-gray-300 border-solid bg-white hover:bg-gray-100 shadow-md p-2 flex items-center justify-center"
           >
-            <span nz-icon nzType="camera" nzTheme="outline"></span>
-            Take a photo
+            <span nz-icon nzType="camera" nzTheme="outline"></span> &nbsp; Take
+            a photo
           </button>
         </div>
         <button
