--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -1,10 +1,12 @@
 <div class="flex flex-col mx-auto w-11/12">
   <div class="flex flex-col mx-auto w-6/12 py-8">
-    <h1 class="text-center" (click)="increment()">
+    <h1 class="text-center text-3xl my-2" (click)="increment()">
       Search Doctor, Make an Appointment
     </h1>
-    <h3 class="text-center" (click)="decrement()">Discover the best doctors</h3>
-    <div>Current count: {{ count$ | async }}</div>
+    <h3 class="text-center text-xl my-2" (click)="decrement()">
+      Discover the best doctors
+    </h3>
+    <div *ngIf="count$ | async">Current count: {{ count$ | async }}</div>
     <form
       action="/search"
       method="post"
@@ -38,8 +40,8 @@
   </div>
   <nz-divider></nz-divider>
   <div class="flex flex-col mx-auto w-6/12 py-8">
-    <h1 class="text-center">Clinic and Specialties</h1>
-    <h3 class="text-center">
+    <h1 class="text-center text-xl my-2">Clinic and Specialties</h1>
+    <h3 class="text-center text-lg my-2">
       Choose from the available clinics or specialties
     </h3>
     <div class="flex flex-col md:flex-row w-full">
